Remove CSS instruction that prevents the slider image to show on mobile.

--- a/css/debs.css
+++ b/css/debs.css
@@ -59,12 +59,14 @@ header .navbar-default .navbar-nav li a {
 }
 
 #slider {
+    background-image: url('/img/neuchatel/cvincentbourrut-neuchatel_2000.jpg');
     padding-bottom: 100px;
     padding-top: 100px;
 }
 
 @media (max-width: 991px) {
     #slider {
+        background-attachment: initial;
         padding-bottom: 20px;
         padding-top: 20px;
     }
